--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 cpp-unit/main
 .vscode/settings.json
 .vscode/c_cpp_properties.json
+java-unit/SwtLabJUnit/.project
+java-unit/SwtLabJUnit/.classpath
+.gitignore
+.DS_Store
+java-unit/SwtLabJUnit/.settings/org.eclipse.core.resources.prefs
+java-unit/SwtLabJUnit/.settings/org.eclipse.jdt.apt.core.prefs
+.gitignore
+java-unit/SwtLabJUnit/.settings/org.eclipse.jdt.core.prefs
+.gitignore
+java-unit/SwtLabJUnit/.settings/org.eclipse.m2e.core.prefs
+.gitignore
+java-unit/SwtLabMocks/.project
+.gitignore
+java-unit/SwtLabMocks/.classpath
+java-unit/SwtLabMocks/.settings/org.eclipse.m2e.core.prefs
+.gitignore
+java-unit/SwtLabMocks/.settings/org.eclipse.jdt.apt.core.prefs
+java-unit/SwtLabMocks/.settings/org.eclipse.jdt.core.prefs
