BDD initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,22 @@ java-unit/SwtLabMocks/.settings/org.eclipse.m2e.core.prefs
 .gitignore
 java-unit/SwtLabMocks/.settings/org.eclipse.jdt.apt.core.prefs
 java-unit/SwtLabMocks/.settings/org.eclipse.jdt.core.prefs
+bdd/target/test-classes/de/hse/swt/GivenSomeState.class
+bdd/target/test-classes/de/hse/swt/OrderProcessTest.class
+bdd/target/test-classes/de/hse/swt/ThenSomeOutcome.class
+bdd/target/test-classes/de/hse/swt/WhenSomeAction.class
+bdd/target/BDD-0.0.1-SNAPSHOT.jar
+bdd/target/jgiven-reports/html/app.bundle.js
+bdd/target/jgiven-reports/html/c8ddf1e5e5bf3682bc7bebf30f394148.woff
+bdd/target/jgiven-reports/html/index.html
+bdd/target/jgiven-reports/html/styles.bundle.js
+bdd/target/jgiven-reports/html/styles.css
+bdd/target/jgiven-reports/html/data/data0.js
+bdd/target/jgiven-reports/html/data/metaData.js
+bdd/target/jgiven-reports/html/data/tags.js
+bdd/target/jgiven-reports/json/de.hse.swt.OrderProcessTest.json
+bdd/target/maven-archiver/pom.properties
+bdd/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+bdd/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+bdd/target/surefire-reports/de.hse.swt.OrderProcessTest.txt
+bdd/target/surefire-reports/TEST-de.hse.swt.OrderProcessTest.xml
